[C] fix letters overlapping

--- a/client/style/game.less
+++ b/client/style/game.less
@@ -5,6 +5,7 @@
 #text {
 	font-family: 'Roboto Mono', monospace;
 	font-size: 25px;
+	line-height: 1.4;
 	padding: 10px;
 	background: @dark-white;
 	color: black;
@@ -29,8 +30,6 @@
 
 #text span {
 	border: 1px solid rgba(0,0,0,0);
-	margin: 0;
-	padding: 0;
 }
 #text span[name=written] {
 	color: grey;
